--- a/tutorial/chapter04_5.adoc
+++ b/tutorial/chapter04_5.adoc
@@ -221,7 +221,7 @@ fun invertPositives(list: MutableList<Int>) {
     }
 }
 
-fun exam() {
+fun test() {
     // Участок номер 1
     val a = mutableListOf(1, -2, 3)
     invertPositives(a)
